# x64base

./: .editorconfig  .gitattributes  .gitignore  404.html  AI_PORTAL.md  AI_README.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEFAULT html  DOTTALKPP_COMMAND_REFERENCE_GUIDE_V1.md  DOTTALKPP_MANUAL_ANCHOR_MAP_V1.md  DOTTALKPP_MANUAL_MATURITY_MODEL_V1.md  DOTTALKPP_MANUAL_PROSE_GUIDE_V1.md  DOTTALKPP_PROFESSIONAL_MANUAL_BLUEPRINT_V1.md  DOTTALKPP_READER_MANUAL_DRAFT_V1.md  DOTTALKPP_READER_MANUAL_V1.md  LICENSE  MANIFEST.txt  PROMOTE.manifest  PROMOTION_CHECKLIST.md  PROMOTION_PROCESS.md  README.md  README_NEW.md  RELEASE_NOTES.md  SECURITY.md  Start-StaticServer.ps1  Start-WebApp.ps1  WORKFLOW_X64BASE.md  X64BASE_DATA_STAGING_TRIAGE.md  X64BASE_HYGIENE_INVENTORY.md  X64BASE_REVERSE_NORMALIZATION_PLAN.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  (+37 more)
bindings/pydottalk/: CMakeLists.txt
src/: $envVCPKG_ROOT = CUsersderalvcpkg.txt  CMakeLists.txt  CMakelists.txt  cmd_manstar_candidate.cpp  cmd_manstar_candidate.h
src/AIPortal/: Collection Point for AI relatied integration into the DottalkppLabtalk ecosystem.txt
src/bindings/: CMakeLists.txt  glue.cpp  pydottalk.cpp
src/browser/: browser_builders.cpp  browser_relation_adapter.cpp  browser_render_console.cpp  browser_session.cpp
src/cdx/: cdx_document.cpp  cdx_file.cpp  cdx_file.hpp
src/cli/: CMakeLists.txt  MUTATION INDEX COHERENCE CANARY V1.txt  README_DROPIN.txt  RULE CONSTRAINT TEST - STUDENTS.txt  SEARCH AND PREDICATE CANARY V1 START.txt  TUPLE BRIDGE SMOKE TEST WORKSPACE SMARTLIST.txt  X64SAMPLE - POPULATE 20 RECORDS.txt  about_info.cpp  about_info_posix.cpp  ai_devtools_policy.cpp  app_army.cpp  app_erp.cpp  app_paxon.cpp  append_support.cpp  area_banner.cpp  area_banner.hpp  beta_runtime.cpp  browse_controller.cpp  browse_lines.cpp  build_help.ps1  case_catalog.cpp  catalog_reader_adapter.cpp  cli_currency.cpp  cli_currency.hpp  cli_overloads.cpp  cmd_about.cpp  cmd_aggs.cpp  cmd_append.cpp  cmd_append_blank.cpp  cmd_area.cpp  cmd_ascend.cpp  cmd_autodbf.cpp  cmd_bang.cpp  cmd_bbox.cpp  cmd_bell.cpp  cmd_beta.cpp  cmd_bottom.cpp  cmd_browse.cpp  cmd_browser.cpp  cmd_browsetui.cpp  (+400 more)
src/cnx/: cnx_document.cpp  cnx_file.cpp  cnx_file.hpp
src/common/: path_resolver.cpp  path_state.cpp
src/core/: Header Trinity and x64 Vector Metadata Contract.txt  Updated x64 Vector Plan.txt  dbf_create.cpp  fields_mgr.cpp
src/data/: DATA_INDEX_README.txt
src/datadict/: ddict_callsite_bridge.cpp  ddict_callsite_bridge.hpp  ddict_catalog_paths.cpp  ddict_catalog_resolver.cpp  ddict_catalog_resolver.hpp  ddict_dbf_reader.cpp  ddict_object_resolver.cpp  ddict_read_helpers.cpp
src/dewey/: Hier_README.txt  cmd_hier.cpp  copy directories.txt  dewey_benchmark.hpp  dewey_index.hpp  hierarchy_service.cpp  hierarchy_service.hpp
src/dli/: browse_edit.cpp  browsetui_fastpatch.cpp  browsetui_integration.cpp  demo_main.cpp  recno_shim.cpp  replace_api.cpp  set_view.cpp
src/edu/: edu_ascii_table.cpp  edu_bibletalk.cpp  edu_boolean.cpp  edu_boyce_codd.cpp  edu_case.cpp  edu_christmas.cpp  edu_cobol.cpp  edu_dewey_decimal.cpp  edu_edit.cpp  edu_erp.cpp  edu_evaluate.cpp  edu_formula.cpp  edu_hanukkah.cpp  edu_idx.cpp  edu_missing_shims.cpp  edu_normalize.cpp  edu_six.cpp  edu_snx.cpp  edu_text.cpp
src/ext/: ext_policy.hpp
src/help/: CMakeLists.txt  helpdata_artifacts.cpp  helpdata_artifacts.hpp  helpdata_export_dbf.cpp  helpdata_export_dbf.hpp  helpdata_messages.cpp  helpdata_messages.hpp  helpdata_model.cpp  helpdata_model.hpp  helpdata_source_miner.cpp  helpdata_source_miner.hpp  locale_spine_catalog.cpp  locale_spine_catalog.hpp  message_catalog.cpp  message_catalog.hpp
src/identity/: identity_admin.cpp  identity_bootstrap.cpp  identity_dbf_store.cpp
src/import/: import_profile.cpp
src/labtalk/: __init__.py
src/maintenance/: generated_help_runtime_contract.cpp  generated_help_runtime_contract.hpp
src/manual/: manual_catalog_reader.cpp  manual_catalog_reader.h  manual_catalog_resolver.cpp  manual_catalog_resolver.h  manual_report_formatter.cpp  manual_report_formatter.h
src/memo/: CMakeLists.txt  memo_auto.cpp  memo_auto.hpp  memo_manager.cpp  memo_object.cpp  memo_ref.cpp  memo_smoke.cpp  memostore.cpp  x64_memo_store.cpp
src/meta/: metacollect.cpp
src/ms365/: dot_talk_m365_integration.cpp  dot_talk_m365_integration.hpp
src/palette/: cmd_fox_palette_entry.cpp  cmd_palette_shim.cpp  foxtalk_palette.cpp  foxtalk_palettes.cpp  palette.cpp  palette.h  palette_app.cpp  palette_app.h
src/pch/: pch.h
src/psych/: x64base.com Evaluation Report.txt
src/reference/: data_address.cpp  qualified_reference.cpp
src/rules/: README.md
src/sqlite/: sqlite_adapter.cpp
src/tests/: CMakeLists.txt  PS clean build.txt  profile_smoke.py  test_field_codec.cpp  test_lmdb_backend.cpp  test_lmdb_backend.hpp  test_pdlc_foundation_smoke.cpp  test_recno64_boundary.cpp  test_recno64_sparse_e2e.cpp  test_security_policy.cpp  test_sql_where.cpp  test_where_cache_only.cpp  test_x64_record_limit.cpp  vfp_field_interop.py
src/tools/: metacollect_main.cpp
src/tuple/: cell_validate.cpp  root_recno_source.cpp  tuple_cell_adapter.cpp  tuple_command_spec.cpp  tuple_graph_cursor.cpp  tuple_validate.cpp
src/tv/: CMakeLists.txt  cmd_browsetui.cpp  cmd_foxpro.cpp  cmd_foxtalk.cpp  cmd_generic.cpp  cmd_recordview.cpp  foxtalk_app.cpp  foxtalk_command_input.cpp  foxtalk_command_window.cpp  foxtalk_layout.cpp  foxtalk_log_view.cpp  foxtalk_menu.cpp  foxtalk_menu.phase4_professional.cpp  foxtalk_message_line.cpp  foxtalk_output_window.cpp  foxtalk_pro_menu_ids.hpp  foxtalk_redirect.cpp  foxtalk_shell_bridge.cpp  foxtalk_status.cpp  foxtalk_workspace_view.cpp  foxtalk_workspace_window.cpp  hello.cpp  hello.hpp
src/value/: value.cpp
src/workspace/: WORKSPACE LOAD ACCOUNTING SMOKE.txt  schema_area_state.cpp  schema_workspace.cpp  workarea_manager.cpp  workarea_slot.cpp  workarea_utils.cpp  workarea_utils.hpp
src/xbase/: CMakeLists.txt  Vector Restore.txt  (+19 more)
(+2989 files in other folders)
